# flux9s

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  Makefile  PLUGIN_IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  deny.toml  justfile  libstate.rlib  manifest.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-tag-release.yml  bump-version.yml  check-crd-updates.yml  ci.yml  codeql.yml  dependabot-auto-merge.yaml  docs.yml  gitleaks.yml  live-tests.yml  prepare-release.yml  release.yml  sbom.yml  scorecard.yml  signing-smoke-test.yml
crds/: flux-operator-resourcesetinputproviders.crds.yaml  helm-controller.crds.yaml  image-automation-controller.crds.yaml  image-reflector-controller.crds.yaml  kustomize-controller.crds.yaml  notification-controller.crds.yaml  source-controller.crds.yaml
docs/: .gitignore  README.md  SETUP.md  THEME_CUSTOMIZATION.md  config.toml  go.mod  go.sum  package-lock.json  package.json
docs/assets/scss/: _styles_project.scss  _variables_project.scss  _variables_project_after_bs.scss
docs/content/: _index.md
docs/content/configuration/: _index.md
docs/content/developer-guide/: _index.md  theme-system.md
docs/content/getting-started/: _index.md  installation.md
docs/content/user-guide/: _index.md
docs/images/: .gitkeep
docs/layouts/partials/: head-custom.html  navbar.html  scripts.html
docs/layouts/partials/footer/: left.html  links.html
docs/scripts/: fetch-metadata.sh
docs/static/js/: dark-mode.js  font-fallback.js  metadata.js
examples/plugins/: README.md  argocd.yaml
examples/themes/: dracula.yaml  solarized-dark.yaml
scripts/: dev-clusters.sh  fetch-crds.sh  generate-models.sh  rbac-test.sh  update-flux.sh
scripts/dev-manifests/: fluxinstance-legacy.yaml  fluxinstance-medium.yaml  fluxinstance.yaml  rbac-namespaced.yaml  rbac-restricted.yaml
scripts/dev-manifests/legacy/: sources.yaml  workloads.yaml
scripts/dev-manifests/simple/: 00-discovered-crd.yaml  helm.yaml  image-automation.yaml  kustomize.yaml  notifications.yaml  operator.yaml  sources.yaml  widgets.yaml
scripts/dev-manifests/stress/: helm.yaml.tpl  image-automation.yaml.tpl  kustomize.yaml.tpl  notifications.yaml.tpl  operator.yaml.tpl  sources.yaml.tpl
src/: constants.rs  editor.rs  lib.rs  main.rs  operations.rs
src/cli/: commands.rs  config.rs  logging.rs  mod.rs  plugin.rs  version.rs
src/config/: defaults.rs  embedded_themes.rs  loader.rs  mod.rs  paths.rs  schema.rs  theme_loader.rs  theme_test.rs
src/config/embedded_themes/: ayu-dark.yaml  base16-dark.yaml  catppuccin-mocha.yaml  default-light.yaml  dracula.yaml  gruvbox-dark.yaml  inthenavy.yaml  kiss.yaml  monokai.yaml  nord.yaml  one-dark.yaml  papercolor-dark.yaml  rose-pine-moon.yaml  snazzy.yaml  solarized-dark.yaml  tokyo-night.yaml  tomorrow-night.yaml
src/kube/: api.rs  events.rs  fetch.rs  health.rs  inventory.rs  mod.rs
src/models/: extensions.rs  extra_kinds.rs  flux_resource_kind.rs  mod.rs  resource_fields.rs
src/models/_generated/: flux_operator_fluxinstances.rs  flux_operator_fluxreports.rs  flux_operator_resourcesetinputproviders.rs  flux_operator_resourcesets.rs  helm_controller.rs  image_automation_controller.rs  image_reflector_controller.rs  kustomize_controller.rs  mod.rs  notification_controller.rs  source_controller.rs  source_watcher.rs
src/plugins/: cache.rs  column_extraction.rs  loader.rs  manifest.rs  mod.rs  registry.rs  validator.rs
src/plugins/datasource/: connector.rs  file.rs  http.rs  k8s_service.rs  mod.rs
src/services/: cluster_session.rs  mod.rs  resource_service.rs
src/trace/: core.rs  graph.rs  graph_builder.rs  mod.rs  models.rs
src/tui/: api.rs  app.rs  commands.rs  constants.rs  keybindings.rs  mod.rs  operations.rs  submenu.rs  theme.rs  trace.rs
src/tui/app/: async_ops.rs  async_task.rs  core.rs  events.rs  logs.rs  mod.rs  rendering.rs  state.rs
src/tui/views/: confirmation.rs  connection_error.rs  describe.rs  detail.rs  edit.rs  events.rs  footer.rs  graph.rs  header.rs  help.rs  helpers.rs  history.rs  logs.rs  mod.rs  quit_confirm.rs  resource_fields.rs  resource_list.rs  splash.rs  submenu.rs  trace.rs  yaml.rs
src/watcher/: mod.rs  registry.rs  resource.rs  state.rs
tests/: README.md  crd_compatibility.rs  edit_feature_tests.rs  favorites_tests.rs  field_extraction.rs  graph_tests.rs  live_tests.rs  model_compatibility.rs  navigation_tests.rs  reconciliation_history_tests.rs  resource_registry.rs  snapshot_tests.rs  trace_tests.rs
tests/snapshots/: snapshot_tests__render_footer_command_mode.snap  snapshot_tests__render_footer_connection_error.snap  snapshot_tests__render_footer_filter_mode.snap  snapshot_tests__render_footer_navigation.snap  snapshot_tests__render_header.snap  snapshot_tests__render_header_with_filter.snap  snapshot_tests__render_header_with_namespace.snap  snapshot_tests__render_resource_describe_with_data.snap  snapshot_tests__render_resource_detail.snap  snapshot_tests__render_resource_detail_no_selection.snap  snapshot_tests__render_resource_list_empty.snap  snapshot_tests__render_resource_list_with_resource_type_filter.snap  snapshot_tests__render_resource_list_with_selection.snap  snapshot_tests__render_resource_yaml_no_selection.snap  snapshot_tests__render_resource_yaml_pending.snap  snapshot_tests__render_resource_yaml_with_data.snap
tests/unit/: mod.rs
