[package]
name = "flux9s"
version = "0.1.3"
edition = "2021"
authors = ["Dan Guns <danbguns@gmail.com>"]
description = "A K9s-inspired terminal UI for monitoring Flux GitOps resources"
license = "Apache-2.0"
repository = "https://github.com/dgunzy/flux9s"
homepage = "https://github.com/dgunzy/flux9s"
documentation = "https://docs.rs/flux9s"
keywords = ["kubernetes", "flux", "gitops", "tui", "k9s"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Kubernetes client
kube = { version = "2.0.1", features = ["runtime", "derive"] }
# k8s-openapi version feature - must match kube-rs version
k8s-openapi = { version = "0.26.0", default-features = false, features = [
    "v1_31",
] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# TUI framework
ratatui = "0.26"
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
mockall = "0.12"

[package.metadata.binstall]
# cargo-binstall configuration for pre-built binary installation
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-x86_64.{ archive-format }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-x86_64.{ archive-format }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-windows-x86_64.{ archive-format }"
pkg-fmt = "zip"

[[test]]
name = "crd_compatibility"
path = "tests/crd_compatibility.rs"

[[test]]
name = "resource_registry"
path = "tests/resource_registry.rs"

[[test]]
name = "field_extraction"
path = "tests/field_extraction.rs"
